--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          java-version: "17"
+          distribution: 'temurin'  # <-- ADD THIS LINE HERE
+          java-version: "17""
       - name: Build
         run: |
           # Just create a dummy APK for testing
