--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'  # <-- ADD THIS LINE HERE
-          java-version: "17""
+          distribution: 'temurin'
+          java-version: "17"
+      
       - name: Build
         run: |
           # Just create a dummy APK for testing
           mkdir -p app/build/outputs/apk/debug
           echo "Test APK" > app/build/outputs/apk/debug/app-debug.apk
+      
       - uses: actions/upload-artifact@v4
         with:
           name: apk
